# CDS_Final

./: .gitignore  LICENSE  README.md  flights_notebook.ipynb  notebook.ipynb  requirements.txt  setup.cfg  setup.py  virtualenvironment.txt
test/features/: test_features.py  test_load.py
test/load/: test_load.py
test/metrics/: test_metrics.py
test/model/: test_model.py
test/preprocessor/: test_preprocessor.py
test/split/: test_split.py
